# ros2_programaG

src/: README.md
src/arlo_gp_controller/: package.xml  setup.cfg  setup.py
src/arlo_gp_controller/arlo_gp_controller/: main.py
src/arlo_gp_controller/arlo_gp_controller/gp/: gp.py  gpNode.py  gpTree.py  ruleSet.py  runBest.py  test.py  trayectorias.py
src/arlo_interfaces/: CMakeLists.txt  package.xml
src/arlo_interfaces/msg/: Array.msg
src/arlo_interfaces/srv/: EvaluateTree.srv
src/arlo_mejorado_precision_llantas/arlo_mejorado/: CMakeLists.txt  package.xml
src/arlo_mejorado_precision_llantas/arlo_mejorado/launch/: main.launch.py
src/arlo_mejorado_precision_llantas/arlo_mejorado/models/arlodrive/: model.sdf
src/arlo_mejorado_precision_llantas/arlo_mejorado/worlds/: laberinto_01.xml
src/arlo_nn_controller/: CMakeLists.txt  package.xml
src/arlo_nn_controller/src/: SimulationController.cpp  SimulationController.h  startServerNode.cpp
src/arlo_nn_controller/srv/: EvaluateDriver.srv
