<?xml version="1.0"?>
<package format="3">
  <name>arlo_nn_controller</name>
  <version>0.0.0</version>
  <description>The arlo_nn_controller package</description>

  <maintainer email="tonio.jaimes@gmail.com">Antonio Lopez-Jaimes</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>std_srvs</depend>
  <depend>arlo_interfaces</depend>


  <exec_depend>rclpy</exec_depend>
  <!--Asi se corrige el error de member of group-->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
